--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "next": "14.2.3",
+    "node": "^20.13.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
