--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "aos": "^3.0.0-beta.6",
+    "i18next": "^23.11.4",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.3",
+    "next-i18n-router": "^5.4.2",
     "node": "^20.13.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "i18nexus-cli": "^3.4.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
