--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "i18next": "^23.11.4",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-i18n-router": "^5.4.2",
     "node": "^20.13.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1"
   },
