--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.1",
     "i18next": "^23.11.4",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.3",
