✨ @APBielzinx Retirando Função de salvar Foto

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 I18NEXUS_API_KEY="OL1vUqBI94dLrpAJaG9EaQ"
+AWS_ACCESS_KEY_ID="AKIA6ODU7LCDHOPFCOK2"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_REGION="sa-east-1"
+AWS_BUCKET_NAME="calmomilla-fotos"
