--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.1",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
