@vitorvhsilva Login com o Google começando a ser feito

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ AWS_ACCESS_KEY_ID="AKIA6ODU7LCDHOPFCOK2"
 AWS_SECRET_ACCESS_KEY="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"
 AWS_REGION="sa-east-1"
 AWS_BUCKET_NAME="calmomilla-fotos"
+GOOGLE_CLIENT_ID="156414463385-7psk7ml11l06cvjef9os8c6o4nrl6pdh.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
