--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.11.4",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-i18n-router": "^5.4.2",
     "node": "^20.13.1",
     "react": "^18.3.1",
